--- a/index.html
+++ b/index.html
@@ -36,6 +36,24 @@
         </section>
     </header>
     <!-- ----------Header Part End------------- -->
+    <!-- MAIN PART START -->
+    <main>
+        <section class="quick-list">
+            <div class="quick-list-img">
+                <img src="img/team1.png" alt="">
+                <img src="img/team2.png" alt="">
+                <img src="img/team3.png" alt="">
+                <img src="img/team4.png" alt="">
+            </div>
+            <div class="quick-list-text">
+                <h1><span class="t-part-1">Quick list</span> of Our <span class="t-part-2">Features</span></h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <button class="header-btn">Explore More</button>
+            </div>
+        </section>
+
+    </main>
+    <!-- -----MAIN PART END----- -->
 </body>
 
 </html>
