--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
         </section>
         <section class="header-text">
             <h1>Brand New <br> Group of Architects</h1>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
+                in some form, by injected humour, or randomised words which don't look even</p>
             <div class="header-btn-class">
                 <button class="header-btn">Explore More</button>
             </div>
@@ -47,8 +48,42 @@
             </div>
             <div class="quick-list-text">
                 <h1><span class="t-part-1">Quick list</span> of Our <span class="t-part-2">Features</span></h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                    <button class="header-btn">Explore More</button>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="header-btn">Explore More</button>
+            </div>
+        </section>
+        <!-- -------Experience Part Start-------------->
+        <section class="experience">
+            <div class="experience-textbox">
+                <div class="experience-text-header">
+                    <h1>Features you will love & enjoy</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised words which don't look even</p>
+                </div>
+                <div class="card">
+                    <h1>Dexktop & Mobile Version</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h1>Drag & Drop Builder</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h1>Awesome Modern Design</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="card">
+                    <h1>Super Easy to Edit</h1>
+                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                        alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+            </div>
+            <div class="experience-imageBox">
+                <img src="img/architect.png" alt="">
             </div>
         </section>
 
