--- a/index.html
+++ b/index.html
@@ -90,9 +90,56 @@
                 </div>
             </div>
         </section>
-
+        <!-- SOOME FACT PART START-->
+        <section class="some-fact">
+            <div class="some-fact-text">
+                <h1>Some Facts</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered
+                    alteration.</p>
+            </div>
+            <div class="some-fact-content">
+                <div class="some-fact-card">
+                    <img src="/img/icons/ribon.png" alt="">
+                    <h3>54</h3>
+                    <p>Awards Winnings</p>
+                </div>
+                <div class="some-fact-card">
+                    <img src="/img/icons/projects.png" alt="">
+                    <h3>1458</h3>
+                    <p>Project Finished</p>
+                </div>
+                <div class="some-fact-card">
+                    <img src="img/icons/customers.png" alt="">
+                    <h3>590</h3>
+                    <p>Clients Worked</p>
+                </div>
+                <div class="some-fact-card">
+                    <img src="/img/icons/email.png" alt="">
+                    <h3>22578</h3>
+                </div>
+            </div>
+        </section>
+        <section class="sponspors">
+            <div class="sponspors-text">
+                <h1>Our Sponspors</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+            </div>
+            <div class="sopnspors-company">
+                <img src="/img/sponsors/amazon.png" alt="">
+                <img src="/img/sponsors/figma.png" alt="">
+                <img src="/img/sponsors/google.png" alt="">
+                <img src="/img/sponsors/spotify.png" alt="">
+                <img src="/img/sponsors/telerama.png" alt="">
+            </div>
+        </section>
     </main>
     <!-- -----MAIN PART END----- -->
+    <!-- ----------------FOOTER PART START----------------- -->
+    <footer>
+        <div class="footer-container">
+            <p>All rights reserved copyright@2023 startup landing page design</p>
+        </div>
+    </footer>
 </body>
 
 </html>
