--- a/index.html
+++ b/index.html
@@ -84,10 +84,7 @@
             </div>
             <div class="experience-imageBox">
                 <img src="img/architect.png" alt="">
-                <div class="img-btn">
-                    <h1>10+Year</h1>
-                    <p>Experience</p>
-                </div>
+                <button class="img-btn">10+Year <br> Experience</button>
             </div>
         </section>
         <!-- SOOME FACT PART START-->
