--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 <div class="some-fact-card">
                     <img src="/img/icons/email.png" alt="">
                     <h3>22578</h3>
+                    <p>Email Sent</p>
                 </div>
             </div>
         </section>
@@ -128,6 +129,11 @@
                 <img src="/img/sponsors/spotify.png" alt="">
                 <img src="/img/sponsors/telerama.png" alt="">
             </div>
+        </section>
+        <section class="video">
+            <h1>Glowing and growing!</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet odio culpa, perferendis veritatis dolore architecto quo nobis laboriosam corrupti sed.</p>
+            <video src="video/video.mp4" controls></video>
         </section>
     </main>
     <!-- -----MAIN PART END----- -->
