--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         </section>
         <section class="header-text">
             <h1>Brand New <br> Group of Architects</h1>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-                in some form, by injected humour, or randomised words which don't look even</p>
+            <p>Architecture is a way of thinking about the world very similar in structure to writing a book, since both disciplines represent the same field and domain</p>
             <div class="header-btn-class">
                 <button class="header-btn">Explore More</button>
             </div>
@@ -58,28 +57,23 @@
             <div class="experience-textbox">
                 <div class="experience-text-header">
                     <h1>Features you will love & enjoy</h1>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration in some form, by injected humour, or randomised words which don't look even</p>
+                    <p>When I’m working on a problem, I never think about its beauty, I just think about how to solve the problem, but when I finish it, if the solution is not beautiful, I know it’s wrong.</p>
                 </div>
                 <div class="card">
                     <h1>Dexktop & Mobile Version</h1>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration in some form, by injected humour, or randomised...........</p>
+                    <p>If a project is intense, valid, and has a powerful idea, its imperfections will be in the background...........</p>
                 </div>
                 <div class="card">
                     <h1>Drag & Drop Builder</h1>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration in some form, by injected humour, or randomised...........</p>
+                    <p>Early in my career...I had to choose between an honest arrogance and a hypercritical humility... I deliberately choose an honest arrogance, and I've never been sorry...........</p>
                 </div>
                 <div class="card">
                     <h1>Awesome Modern Design</h1>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration in some form, by injected humour, or randomised...........</p>
+                    <p>We should attempt to bring nature, houses, and human beings together in a higher unity...........</p>
                 </div>
                 <div class="card">
                     <h1>Super Easy to Edit</h1>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                        alteration in some form, by injected humour, or randomised...........</p>
+                    <p>Architecture is a way of thinking about the world very similar in structure to writing a book, since both disciplines represent the same field and domain...........</p>
                 </div>
             </div>
             <div class="experience-imageBox">
@@ -91,8 +85,7 @@
         <section class="some-fact">
             <div class="some-fact-text">
                 <h1>Some Facts</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered
-                    alteration.</p>
+                <p>Early in my career...I had to choose between an honest arrogance and a hypercritical humility... I deliberately choose an honest arrogance, and I've never been sorry</p>
             </div>
             <div class="some-fact-content">
                 <div class="some-fact-card">
@@ -132,8 +125,8 @@
         </section>
         <section class="video">
             <h1>Glowing and growing!</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet odio culpa, perferendis veritatis dolore architecto quo nobis laboriosam corrupti sed.</p>
-            <video src="video/video.mp4" controls></video>
+            <p>As an architect, you design for the present, with an awareness of the past for a future which is essentially unknown.</p>
+            <video src="video/video1.mp4" controls></video>
         </section>
     </main>
     <!-- -----MAIN PART END----- -->
