--- a/index.html
+++ b/index.html
@@ -47,8 +47,7 @@
             </div>
             <div class="quick-list-text">
                 <h1><span class="t-part-1">Quick list</span> of Our <span class="t-part-2">Features</span></h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                    alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <p>I aim to make it as simple and immersive as possible with many axon drawings and full bleed model perspective photos that allow me to tell a story in just one glance.</p>
                 <button class="header-btn">Explore More</button>
             </div>
         </section>
@@ -113,7 +112,7 @@
         <section class="sponspors">
             <div class="sponspors-text">
                 <h1>Our Sponspors</h1>
-                <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+                <p>TWhether you’re studying architecture or applying for <br> a role at your dream practice</p>
             </div>
             <div class="sopnspors-company">
                 <img src="/img/sponsors/amazon.png" alt="">
