--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
             </div>
             <div class="some-fact-content">
                 <div class="some-fact-card">
-                    <img src="/img/icons/ribon.png" alt="">
+                    <img src="img/icons/ribon.png" alt="">
                     <h3>54</h3>
                     <p>Awards Winnings</p>
                 </div>
                 <div class="some-fact-card">
-                    <img src="/img/icons/projects.png" alt="">
+                    <img src="img/icons/projects.png" alt="">
                     <h3>1458</h3>
                     <p>Project Finished</p>
                 </div>
@@ -103,7 +103,7 @@
                     <p>Clients Worked</p>
                 </div>
                 <div class="some-fact-card">
-                    <img src="/img/icons/email.png" alt="">
+                    <img src="img/icons/email.png" alt="">
                     <h3>22578</h3>
                     <p>Email Sent</p>
                 </div>
