--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
                 <p>TWhether you’re studying architecture or applying for <br> a role at your dream practice</p>
             </div>
             <div class="sopnspors-company">
-                <img src="/img/sponsors/amazon.png" alt="">
-                <img src="/img/sponsors/figma.png" alt="">
-                <img src="/img/sponsors/google.png" alt="">
-                <img src="/img/sponsors/spotify.png" alt="">
-                <img src="/img/sponsors/telerama.png" alt="">
+                <img src="img/sponsors/figma.png" alt="">
+                <img src="img/sponsors/amazon.png" alt="">
+                <img src="img/sponsors/google.png" alt="">
+                <img src="img/sponsors/spotify.png" alt="">
+                <img src="img/sponsors/telerama.png" alt="">
             </div>
         </section>
         <section class="video">
